--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ banner {
       <td colspan="2" rowspan="1"
  style="height: 150px; width: 548px;"><img
  style="width: 792px; height: 150px;" alt="Ali Taş, DVM"
- src="banner.png"><br>
+ src=![banner](https://user-images.githubusercontent.com/97441252/149083156-47feaebf-0ea5-4d8b-ba71-7399c9a26654.png)><br>
       </td>
     </tr>
     <tr class="cell"
